vendor/cdk-rs/ic-cdk/tests/compile_fail/only_function.rs
use ic_cdk::query;

#[query]
struct S;

fn main() {}
