vendor/cdk-rs/ic-cdk/tests/compile_fail/only_function.stderr
error: #[query] must be above a function.
       expected `fn`
 --> tests/compile_fail/only_function.rs:4:1
  |
4 | struct S;
  | ^^^^^^
